<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/Cameraframe"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:weightSum="1">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/MenuLayout"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:alpha="1"
        android:orientation="vertical"
        android:visibility="visible"
        android:weightSum="1">

        <LinearLayout
            android:id="@+id/hide_menu"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_weight="1.21"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/setupmenu"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/rbghsv_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/darker_gray"
                    android:text="@string/change_to_hsv" />

                <Button
                    android:id="@+id/saveImport_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@android:color/darker_gray"
                    android:text="@string/Saveloadsettings" />

            </LinearLayout>

            <TextView
                android:id="@+id/hue_upper_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hub" />

            <LinearLayout
                android:id="@+id/hh_layout"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:orientation="horizontal">

                <SeekBar
                    android:id="@+id/hh_bar"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:alpha="1"
                    android:max="180" />

                <EditText
                    android:id="@+id/hh_value"
                    android:layout_width="100dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:background="@android:color/darker_gray"
                    android:gravity="center"
                    android:inputType="number"
                    android:nestedScrollingEnabled="false"
                    android:selectAllOnFocus="true"
                    android:text="@string/zero"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <TextView
                android:id="@+id/sat_upper_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sub" />

            <LinearLayout
                android:id="@+id/hs_layout"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:orientation="horizontal">

                <SeekBar
                    android:id="@+id/hs_bar"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:alpha="1"
                    android:max="255" />

                <EditText
                    android:id="@+id/hs_value"
                    android:layout_width="100dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:background="@android:color/darker_gray"

                    android:gravity="center"
                    android:inputType="number"
                    android:nestedScrollingEnabled="false"
                    android:selectAllOnFocus="true"
                    android:text="@string/zero"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <TextView
                android:id="@+id/val_upper_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vub" />

            <LinearLayout
                android:id="@+id/hv_layout"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:orientation="horizontal">

                <SeekBar
                    android:id="@+id/hv_bar"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:alpha="1"
                    android:max="255" />

                <EditText
                    android:id="@+id/hv_value"
                    android:layout_width="100dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:background="@android:color/darker_gray"
                    android:gravity="center"
                    android:inputType="number"
                    android:nestedScrollingEnabled="false"
                    android:selectAllOnFocus="true"
                    android:text="@string/zero"
                    android:textColor="@android:color/black" />

            </LinearLayout>

            <TextView
                android:id="@+id/hue_lower_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hlb" />

            <LinearLayout
                android:id="@+id/lh_layout"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:orientation="horizontal">

                <SeekBar
                    android:id="@+id/lh_bar"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:alpha="1"
                    android:max="255" />

                <EditText
                    android:id="@+id/lh_value"
                    android:layout_width="100dp"
                    android:layout_height="25dp"
                    android:layout_weight="1"
                    android:background="@android:color/darker_gray"
                    android:gravity="center"
                    android:inputType="number"
                    android:nestedScrollingEnabled="false"
                    android:selectAllOnFocus="true"
                    android:text="@string/zero"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <TextView
                android:id="@+id/sat_lower_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/slb" />

            <LinearLayout
                android:id="@+id/ls_layout"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:orientation="horizontal">

                <SeekBar
                    android:id="@+id/ls_bar"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:alpha="1"
                    android:max="255" />

                <EditText
                    android:id="@+id/ls_value"
                    android:layout_width="100dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:background="@android:color/darker_gray"
                    android:gravity="center"
                    android:inputType="number"
                    android:nestedScrollingEnabled="false"
                    android:selectAllOnFocus="true"
                    android:text="@string/zero"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <TextView
                android:id="@+id/val_lower_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vlb" />

            <LinearLayout
                android:id="@+id/lv_layout"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:orientation="horizontal">

                <SeekBar
                    android:id="@+id/lv_bar"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_weight="1"
                    android:alpha="1"
                    android:max="255" />

                <EditText
                    android:id="@+id/lv_value"
                    android:layout_width="100dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:background="@android:color/darker_gray"
                    android:editable="true"
                    android:gravity="center"
                    android:hapticFeedbackEnabled="true"
                    android:inputType="number"
                    android:nestedScrollingEnabled="false"
                    android:selectAllOnFocus="true"
                    android:text="@string/zero"
                    android:textColor="@android:color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checkedButton="@+id/radionone"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/showText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Show" />

                    <RadioButton
                        android:id="@+id/RadioContours"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:text="@string/Contours" />

                    <RadioButton
                        android:id="@+id/radiocircle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="0dp"
                        android:layout_marginRight="5dp"
                        android:text="@string/Circle" />

                    <RadioButton
                        android:id="@+id/radionone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:text="@string/None" />

                </RadioGroup>

                <RadioGroup
                    android:id="@+id/vibGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checkedButton="@+id/vibOff"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/vibText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Vibrator" />

                    <RadioButton
                        android:id="@+id/VibOn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/on" />

                    <RadioButton
                        android:id="@+id/vibOff"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/off" />
                </RadioGroup>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/menu_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="0.11"
            android:elevation="0dp"
            android:text="@string/hidemenu" />

    </LinearLayout>

</RelativeLayout>

